kustomize/image-factory/resources/image-factory/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: image-factory
  namespace: image-factory
spec:
  parentRefs:
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: external
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - factory.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: image-factory
          port: 8080
      timeouts:
        request: 5m
        backendRequest: 5m
